
[package]
authors = ['Kai Schmidt <kaikaliischmidt@gmail.com>']
edition = '2018'
name = 'ruin'
version = '0.1.0'

[dependencies]
clap.features = ['derive']
clap.version = '3.0.0-beta.2'
color-backtrace = '0.5.0'
colored = '2'
derive_more = '0.99.11'
indexmap = '1.6.1'
itertools = '0.10.0'
rand = '0.8.2'
rpds = '0.8.0'
tokenate.path = '../tokenate'
